[package]
name = "query-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
polars = { version = "0.49.1", features = ["json", "lazy"]} # DataFrame 库
polars-plan = "0.49.1"
reqwest = { version = "0.12.22", default-features = false, features = ["rustls-tls"]}
sqlparser = "0.58.0"
tokio = { version = "1.46.1", features = ["fs"]}
tracing = "0.1.41"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"]}
tracing-subscriber = "0.3.19"

[[example]]
name = "dialect"
# path = "examples/dialect.rs"
