[package]
name = "query-py"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "query_py"

[dependencies]
anyhow = "1"
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py37"] }
pyo3-build-config = "0.25.1"
query-rs = { path = "../query-rs" }
tokio = { version = "1", features = ["full"] }
